text overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ input{
     align-items: center;
     margin-bottom: 2%;
     font-size: x-large;
+    z-index: 10000;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
@@ -55,6 +56,12 @@ input{
     text-align: center;
 }
 
+.recipes_section{
+    font-family: 'Capriola', sans-serif;
+    text-align: center;
+    text-decoration: none;
+}
+
 .filter{
     background-color: #EFD595;
     width: 80%;
@@ -88,9 +95,20 @@ input{
     transform: translateY(-3%);
 }
 
-.card-text, .card-body, .div_card, .card{
+.card-body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.card-text{
+    display: -webkit-box;
+    text-align: justify;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
     overflow: hidden;
-    text-overflow: ellipsis;
+    color:black;
+    text-decoration: none;
 }
 
 .button-24 {
@@ -123,7 +141,7 @@ input{
 }
 
 .shadow_box{
-    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+    box-shadow: rgba(239, 149, 149, 0.3) 0px 0px 0px 3px;    
 }
 
 .button_section{
@@ -146,6 +164,10 @@ input{
     .button_section{
         display: flex;
         justify-content: center;
+    }
+
+    .form-control{
+        width: 90% !important;
     }
 }
 
